Fix spacing for all thread-list items
Now that lists can include different types of entries it has exposed a
an issue where we were incorrectly defining list item spacing within the
'app-message' component.

Moved styling into the thread-list CSS.

--- a/src/app/message/message.component.scss
+++ b/src/app/message/message.component.scss
@@ -39,7 +39,3 @@
     white-space: nowrap;
   }
 }
-
-.mat-expansion-panel {
-  margin-bottom: 0.2em;
-}
