--- a/src/app/thread-list/thread-list.component.scss
+++ b/src/app/thread-list/thread-list.component.scss
@@ -11,3 +11,7 @@
   @extend %date-heading;
   margin: 0 0 1em 2em;
 }
+
+.list-item {
+  margin-bottom: 0.2em;
+}
